# TinyRecursiveModels

./: .gitignore  Makefile  README.md  example.env  pretrain.py  pyproject.toml  tasks.py  test_model.py  train_lang.py  train_sudoku.py  train_sudoku_mlp.py  train_sudoku_mlp_v2.py
dataset/: build_sudoku_dataset.py  sudoku.py  synth_dataset.py
models/: losses.py
models/recursive_reasoning/: trm_lang.py
